--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,50 @@
+name: Luna Project Workflow
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build-and-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: |
+          if [ -f package.json ]; then
+            npm install
+          else
+            echo "No package.json found, skipping npm install."
+          fi
+
+      - name: Lint Check
+        run: |
+          if [ -f package.json ]; then
+            npm run lint || echo "No lint script defined, skipping linting."
+          else
+            echo "No package.json found, skipping lint check."
+          fi
+
+      - name: Build Project
+        run: |
+          if [ -f package.json ]; then
+            npm run build || echo "No build script defined, skipping build."
+          else
+            echo "No package.json found, skipping build."
+          fi
+
+      - name: Display Success Message
+        run: echo "🎉 Luna project workflow completed successfully!"
 
